# ai-shopping-assistant

./: LICENSE  airflow.Dockerfile  airflow.requirements.txt  app.py  backend.Dockerfile  docker-compose-app.yml  docker-compose.yaml  frontend.Dockerfile  pyproject.toml  readme.md
backend/: config.py  logging.conf  main.py  server.py  utils.py
backend/agent/: __init__.py  edges.py  generate_chain.py  google search.py  grader.py  graph.py  nodes.py  vector_store.py
backend/database/: chat_sessions.py  db.py  messages.py  users.py
backend/schemas/: __init__.py  auth.py  chain.py  choices.py  search.py  users.py
backend/services/: auth.py  auth_bearer.py  choices.py  debug_response.json  search.py  test.py  users.py
backend/views/: __init__.py  auth.py  choices.py  search.py  users.py
dags/: reddit_data_processor.py  reddit_pipeline.py  reddit_posts.py  reddit_scrapper.py  scrapper.py  tutorial.py
frontend/: config.py
frontend/pages/: chat.py  login.py  register.py
frontend/utils/: api_utils.py  auth.py  chat.py
tests/: test_auth.py  test_search.py
tests/backend/: test_users.py
