[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["Gopi Krishna <gopigof@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.group.backend.dependencies]
langchain-community = "^0.3.9"
langchain-openai = "^0.2.11"
langchain-pinecone = "^0.2.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-jose = "^3.3.0"
requests = "^2.32.3"
langgraph = "^0.2.59"
boto3 = "^1.35.80"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.10.3"}
psycopg2-binary = "^2.9.10"
bcrypt = "^4.2.1"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
